Wed Aug 31, 2005 Linas Vepstas <linas@linas.org>
	* Apply sourceforge patch 1176719 Extensible fix for gtkhtml3 building
	  128490: gnotime-gtkhtml.patch  2005-04-04 17:47  abadger1999
	* Apply sourceforge patch 074658 Add wordwrapping to diary entry boxes
	  110390: gnotime-wordwrap.patch  2004-11-28 08:51  abadger1999
	* Apply sourceforge patch 1074458 Fix a crash when invoking help
	  110357: gnotime-help-error.patch  2004-11-27 22:50  abadger1999
	* Apply sourceforge patch 1038701 Fix to Activity item in popup menu
	  103506: gnotime-popup-menus.patch  2004-10-01 13:37  abadger1999
	* Apply sourceforge patch 1027582 Build system update for qof inclusion.
	  101401: gnotime-static-qof.patch  2004-09-13 15:45  abadger1999

Fri Aug 20, 2004 Linas Vepstas <linas@linas.org>
	* Change build system to use eithr the local or the system libqof
	* Apply gnotime-desktop.patch from Toshio Kuratomi <toshio@tiki-lounge.com>
	* Apply gnotime-help.patch from Toshio Kuratomi <toshio@tiki-lounge.com>
	  This patch fixes the 'help' buttons in various dialogs
	* Apply gnotime-idle.patch from Toshio Kuratomi <toshio@tiki-lounge.com>
	  Fixes idle time so that it works with Linux 2.6 kernel /proc/interrupts
	* Apply gnotime-fedora.patch from Toshio Kuratomi 
	  Fixes the fedora build specs (sourceforge patch 995568)
	* Apply sourceforge patch 1001144 from igive@free.fr
	  use %e to see the estimated sizing of a project in the logfiles
	* Apply new pt_BR translation from Goedson Teixeira Paixao 
	  <goedson@debian.org> sourceforege patch 995929 
	* Fix for Debian Bug #250776 per Goedson, change widget visibility
	  in the edit interval dialog

Sun May 23, 2004 Linas Vepstas <linas@linas.org>
	* Prep for 2.2.1 release: tag gnotime-2-2-1

Tue Apr 27, 2004 Linas Vepstas <linas@linas.org>
	* props-task.c, task_properties.glade: convert dialog
	  to GtkDialog, make dialog interactive (trash two buttons),
	  enlarge the notes area, making it usable.